--- a/VSMobileCenterDemo/Base.lproj/Main.storyboard
+++ b/VSMobileCenterDemo/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="A1U-3t-k0m">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,93 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZp-gt-abW">
+                                <rect key="frame" x="118" y="318" width="140" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="Z4a-A4-etN"/>
+                                    <constraint firstAttribute="height" constant="30" id="bHf-ks-MrW"/>
+                                </constraints>
+                                <state key="normal" title="Sign In"/>
+                                <connections>
+                                    <action selector="welcomeClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RFj-wM-W7D"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xZp-gt-abW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Abn-ou-SZm"/>
+                            <constraint firstItem="xZp-gt-abW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g82-Cy-EIC"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="hoH-4g-EwQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1062" y="124"/>
+        </scene>
+        <!--Welcome View Controller-->
+        <scene sceneID="uJx-Zh-Q13">
+            <objects>
+                <viewController storyboardIdentifier="WelcomeViewController" id="KZZ-yH-UFB" customClass="WelcomeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yrC-5v-cmc"/>
+                        <viewControllerLayoutGuide type="bottom" id="EHM-Xv-kLN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SQq-OG-HTx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to Mobile Center" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQ2-xi-eXi">
+                                <rect key="frame" x="0.0" y="315" width="375" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipl-CV-Zjn">
+                                <rect key="frame" x="125" y="389" width="125" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="XLz-OQ-TQe"/>
+                                    <constraint firstAttribute="width" constant="125" id="xd6-lW-Fzj"/>
+                                </constraints>
+                                <state key="normal" title="Crash"/>
+                                <connections>
+                                    <action selector="crashClicked:" destination="KZZ-yH-UFB" eventType="touchUpInside" id="6lB-Mn-eu4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qQ2-xi-eXi" firstAttribute="leading" secondItem="SQq-OG-HTx" secondAttribute="leading" id="KLj-mK-Qdz"/>
+                            <constraint firstItem="qQ2-xi-eXi" firstAttribute="centerY" secondItem="SQq-OG-HTx" secondAttribute="centerY" id="N7y-2e-DcC"/>
+                            <constraint firstItem="ipl-CV-Zjn" firstAttribute="centerX" secondItem="SQq-OG-HTx" secondAttribute="centerX" id="SeR-dk-bJy"/>
+                            <constraint firstAttribute="trailing" secondItem="qQ2-xi-eXi" secondAttribute="trailing" id="dkr-Vs-gLG"/>
+                            <constraint firstItem="ipl-CV-Zjn" firstAttribute="top" secondItem="qQ2-xi-eXi" secondAttribute="bottom" constant="38" id="lVa-jW-5kX"/>
+                            <constraint firstItem="qQ2-xi-eXi" firstAttribute="centerX" secondItem="SQq-OG-HTx" secondAttribute="centerX" id="vTE-Be-ADB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rOc-wO-YKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1772" y="123.68815592203899"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="glw-Y9-LeH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="A1U-3t-k0m" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vhJ-bh-9Ht">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ofc-Ia-QEd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2sr-O3-fwo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
